<resources>
    <string name="app_name">Shopee</string>
    <string-array name="notifications">
        <item>Đơn hàng 1</item>
        <item>Đơn hàng 2</item>
        <item>Đơn hàng 3</item>
        <item>Đơn hàng 4</item>
        <item>Đơn hàng 5</item>
        <item>Đơn hàng 6</item>
        <item>Đơn hàng 7</item>
    </string-array>
    <string-array name="inforInSettingAccount">
        <item>Đã thích</item>
        <item>Thiết lập tài khoản</item>
        <item>Trung tâm trợ giúp</item>
        <item>Giới thiệu</item>
        <item>Đổi ngôn ngữ</item>
        <item>Đăng xuất</item>
    </string-array>
    <string-array name="detailNotifications">
        <item>Detail đơn hàng 1</item>
        <item>Detail đơn hàng 2</item>
        <item>Detail đơn hàng 3</item>
        <item>Detail đơn hàng 4</item>
        <item>Detail đơn hàng 5</item>
        <item>Detail đơn hàng 6</item>
        <item>Detail đơn hàng 7</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Giỏ hàng</string>
    <string name="cartEmpty">Hông có gì</string>
    <string name="buy">Mua ngay</string>
    <string name="addCart">Thêm vào giỏ</string>
    <string name="allProduct">Tất cả sản phẩm</string>
    <string name="hotProduct">Sản phẩm bán chạy</string>
    <string name="orders">Đơn mua</string>
    <string name="comfirm">Chờ xác nhận</string>
    <string name="orderGiao">Đang giao</string>
    <string name="orderSuccess">Thành công</string>
    <string name="ourStory">Câu chuyện của chúng tôi</string>
    <string name="header">Shopee là nền tảng thương mại điện tử hàng đầu ở Đông Nam Á và Đài Loan.</string>
    <string name="bodyFirst">Ra mắt năm 2015, nền tảng thương mại Shopee được xây dựng nhằm cung cấp cho người sử dùng những trải nghiệm dễ dàng, an toàn và nhanh chóng khi mua sắm trực tuyến thông qua hệ thống hỗ trợ thanh toán và vận hành vững mạnh.</string>
    <string name="bodySecond">Chúng tôi có niềm tin mạnh mẽ rằng trải nghiệm mua sắm trực tuyến phải đơn giản, dễ dàng và mang đến cảm xúc vui thích. Niềm tin này truyền cảm hứng và thúc đẩy chúng tôi mỗi ngày tại Shopee.  KHÁM PHÁ SHOPEE</string>
    <string name="goIndex">Đến với chúng tôi</string>
    <string name="newProduct">Sản phẩm mới</string>
    <string name="category">Danh mục</string>
    <string name="Message">Tin nhắn</string>
    <string name="notification">Thông báo</string>
    <string name="settingAccoutn">Thiết lập tài khoản</string>
    <string name="shopeeFeed">Shopee Feed</string>
    <string name="shopeeLive">Shopee live</string>
    <string name="home">Trang chủ</string>
    <string name="account">Tài khoản</string>
    <string name="forgotPass">Quên mật khẩu</string>
    <string name="code">Nhập số điện thoại của bạn</string>
    <string name="confirmPass">Tiếp tục</string>
    <string name="login">Đăng nhập</string>
    <string name="textLogin">Bạn chưa có tài khoản? Đăng ký</string>
    <string name="register">Đăng kí</string>
    <string name="textRegister">Bạn có tài khoản ? Đăng nhập</string>
    <string name="name">Tên</string>
    <string name="phone">Điện thoại</string>
    <string name="email">Email</string>
    <string name="address">Địa chỉ</string>
    <string name="networkAccount">Tài khoản mạng xã hội</string>
    <string name="networkLienKet">Tài khoản liên kết</string>
    <string name="password">Mật khẩu</string>
    <string name="createDate">Ngày tạo</string>
    <string name="changeName">Sửa Tên</string>
    <string name="saveData">Lưu</string>
    <string name="validateName">Chỉ 100 kí tự</string>
    <string name="changePhoneNumber">Điện thoại</string>
    <string name="changePassword">Mật khẩu</string>
    <string name="diachi">Địa chỉ</string>
    <string name="capNhap">Cập nhập thành công</string>
    <string name="facebook_app_id" translatable="false">1059973504444907</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1059973504444907</string>
    <string name="taiKhoanLienKet">Tài Khoản Mạng Xã Hội</string>
    <string name="lienKetFacebook">Liên kết tài khoản Facebook</string>
    <string name="lienKetInsta">Liên kết tài khoản Instagram</string>
    <string name="lienKetGoogle">Liên kết tài khoản Google</string>
    <string name="lienKetYoutube">Liên kết tài khoản youtube</string>
    <string name="lienKetTwitter">Liên kết tài khoản Twitter</string>
    <string name="language">Ngôn ngữ</string>
    <string name="vietNam">Việt Nam</string>
    <string name="english">Tiếng Anh</string>
    <string name="wait">Chờ mã tôi đã gửi cho bạn</string>
    <string name="verifyCode">Mã xác nhận</string>
    <string name="confirm">Xác thực</string>
    <string name="newPassword">Mật khẩu mới</string>
    <string name="time">Thời gian</string>
    <string name="review">Đánh giá</string>
    <string name="idol">Idol</string>
    <string name="search">Tìm kiếm</string>
    <string name="sale">Sale</string>
    <string name="cauhoithuonggap">Câu Hỏi Thường Gặp</string>
    <string name="buyProductInShopee">Làm sao để mua hàng trên shoppe</string>
    <string name="hoanTien">Hướng dẫn các bước hoàn tiền</string>
    <string name="tichXu">Tích lũy xu shoppe như thế nào?</string>
    <string name="maVanChuyen">Hướng Dẫn Sử Dụng Mã Miễn Phí Vận Chuyển (Mã Freeship)</string>
    <string name="viAirpay">Các Câu Hỏi Thường Gặp Về Ví AirPay Trên Shopee</string>
    <string name="shopMail">Shopee Mall là gì?</string>
    <string name="sanPhanTrenShopMail">Cách tìm kiếm và nhận biết sản phẩm thuộc Shopee Mall trên Shopee.</string>
    <string name="productName">Tên sản phẩm: </string>
    <string name="productPriceDetail">Giá sản phẩm: </string>
    <string name="detailProduct">CHI TIẾT SẢN PHẨM</string>
    <string name="productColor">Màu sắc</string>
    <string name="brandProduct">Nhãn hiệu</string>
    <string name="kho">Số lượng</string>
    <string name="lienKet">Liên Kết</string>
    <string name="more">Xem thêm ></string>
    <string name="listProductBySubCate">Sản phẩm</string>
    <string name="searchName">Tìm kiếm </string>
    <string name="imageProduct">Ảnh</string>
    <string name="nameProduct">Tên sản phẩm</string>
    <string name="quantity">Số lượng</string>
    <string name="delete">Xóa</string>
    <string name="price">Giá</string>
    <string name="danhgia">ĐÁNH GIÁ SẢN PHẨM</string>
    <string name="timkiem">Tìm kiếm</string>
    <string name="totalPrice">Total Price</string>
    <string name="muahang">Mua Hàng</string>
    <string name="xacNhanThongTin">Xác nhận thông tin</string>
    <string name="nameCustomer">Tên người nhận</string>
    <string name="phoneCustomer">Số điện thoại</string>
    <string name="addressCustomer">Địa chỉ</string>
    <string name="xacNhan">Xác nhận thanh toán</string>
    <string name="noteCustomer">Chú ý</string>
    <string name="menu_home">Dashboard</string>
    <string name="menu_profile">Setting</string>
    <string name="menu_history">History</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_product">Product</string>
    <string name="menu_category">Category</string>
    <string name="menu_message">Message</string>
    <string name="menu_account">Account</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="dashboard">Dashboard</string>
    <string name="footer">©2020 Copyright:Shopee.com</string>
    <string name="product">Product</string>
    <string name="addProduct">Add Product</string>
    <string name="addSubCate">Add SubCate</string>
    <string name="addCategory">Add Category</string>
    <string name="menu_order">Order</string>
    <string name="detailAccountAdmin">DetailAccount</string>
    <string name="accountName">Account Name</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="updateAccount">Change Role</string>
    <string name="addressAccount">Address</string>
    <string name="roleAccount">Role</string>
    <string name="phoneNumber">Phone</string>
    <string name="detailOrder">Order Detail</string>
    <string name="cusotmerName">Customer Name</string>
    <string name="totalPrice">Total Price</string>
    <string name="createDateOrder">Create Date</string>
    <string name="status">Status</string>
    <string name="updateStatusOrder">Update Status Order</string>
    <string name="detailCate">Detail Category</string>
    <string name="codeCate">Category Code</string>
    <string name="cateName">Category Name</string>
    <string name="updateCate">Update </string>
    <string name="deleteCate">Delete</string>
    <string name="detailProductAdmin">Detail Product</string>
    <string name="productCode">Product code</string>
    <string name="productNameAdmin">Product Name</string>
    <string name="productBrand">Brand</string>
    <string name="sellPrice">Sell Price</string>
    <string name="originPrice">Origin Price</string>
    <string name="quantityProduct">Quantity</string>
    <string name="subCate">Subcate Name</string>
    <string name="statusProduct">Status Product</string>
    <string name="description">Description</string>
    <string name="subCateCode">SubCate Code</string>
    <string name="subCateName">Subcate Name</string>
    <string name="codeProduct">Product Code</string>
    <string name="productNameAdd">Product Name</string>
</resources>