<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_store_24"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_product"
        android:icon="@drawable/ic_baseline_image_24"
        android:title="@string/menu_product" />
    <item
        android:id="@+id/nav_category"
        android:icon="@drawable/ic_baseline_category_24"
        android:title="@string/menu_category" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_baseline_supervisor_account_24"
        android:title="@string/menu_account" />
    <item
        android:id="@+id/nav_order"
        android:icon="@drawable/ic_baseline_airport_shuttle_24"
        android:title="@string/menu_order" />
    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/menu_message" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu_profile" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/menu_logout" />
</menu>
