<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".admin.CategoryAdminActivity">

    <!--    Header-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <ImageView
            android:id="@+id/iconMenu"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_menu_24"></ImageView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="120dp"
            android:paddingTop="10dp"
            android:text="@string/menu_category"
            android:textColor="#000000"
            android:textSize="20dp"></com.google.android.material.textview.MaterialTextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/addCategory"
            android:textColor="#000000"
            app:backgroundTint="#4fdb77"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/addSubCate"
            android:textColor="#000000"
            app:backgroundTint="#4fdb77"></com.google.android.material.button.MaterialButton>
    </LinearLayout>

    <!--    Body-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="horizontal|vertical">

            <TableLayout
                android:id="@+id/tableLayoutCate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </TableLayout>

        </ScrollView>

    </LinearLayout>


    <include
        layout="@layout/content_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>