<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <fragment
        android:id="@+id/fragmentHeader"
        android:name="com.fragment.HeaderFragement"
        android:layout_width="match_parent"
        android:layout_height="35dp"></fragment>
    <!--    Body-->
    <ScrollView
        android:id="@+id/scrollViewHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="114dp"
                android:layout_alignParentTop="true">

                <com.synnapps.carouselview.CarouselView
                    android:id="@+id/carouselView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:fillColor="#FFFFFFFF"
                    app:pageColor="#00000000"
                    app:slideInterval="2000"
                    app:strokeColor="#FF777777"
                    app:strokeWidth="1dp" />
            </RelativeLayout>
            <!--    San pham moi-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:padding="5dp"
                    android:text="@string/newProduct"
                    android:textColor="#020303"
                    android:textSize="15dp"></TextView>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fillViewport="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="220dp"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/listNewProductMain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scrollbars="none" />

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/card218"
                            android:layout_width="190dp"
                            android:layout_height="220dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/moreInfoNewProduct"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:paddingTop="50dp"
                                    android:src="@drawable/next"></ImageView>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:paddingTop="8dp"
                                    android:text="@string/more"
                                    android:textColor="#020303"></TextView>
                            </LinearLayout>

                        </com.google.android.material.card.MaterialCardView>

                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>


            <!--    San pham ban chay-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/hotProduct"
                    android:textColor="#020303"></TextView>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fillViewport="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/listHotProductMain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scrollbars="none" />

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/card2189"
                            android:layout_width="200dp"
                            android:layout_height="220dp"
                            android:layout_margin="8dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/moreInfoHotProduct"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:paddingTop="50dp"
                                    android:src="@drawable/next"></ImageView>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:paddingTop="8dp"
                                    android:text="Xem Thêm"
                                    android:textColor="#020303"></TextView>
                            </LinearLayout>


                        </com.google.android.material.card.MaterialCardView>

                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <!--   tat ca San pham -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/allProduct"
                    android:textColor="#020303"></TextView>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fillViewport="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/listsProductMain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scrollbars="none" />

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/card2138"
                            android:layout_width="200dp"
                            android:layout_height="220dp"
                            android:layout_margin="8dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/moreInfoAllProduct"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:paddingTop="50dp"
                                    android:src="@drawable/next"></ImageView>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:paddingTop="8dp"
                                    android:text="Xem Thêm"
                                    android:textColor="#020303"></TextView>
                            </LinearLayout>


                        </com.google.android.material.card.MaterialCardView>
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <!--    Danh muc-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Danh mục"
                    android:textColor="#020303"></TextView>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/listCategoryMain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scrollbars="horizontal" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

    <fragment
        android:id="@+id/fragmentFooter"
        android:name="com.fragment.FooterFragement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></fragment>
</com.google.android.material.circularreveal.CircularRevealLinearLayout>